Fix for flash card flip button not working on safari on MacOS as described in https://github.com/thexerteproject/xerteonlinetoolkits/issues/910 change height of empty div to 4px rather than 4em

--- a/modules/xerte/parent_templates/Nottingham/models_html5/flashCards.css
+++ b/modules/xerte/parent_templates/Nottingham/models_html5/flashCards.css
@@ -158,7 +158,7 @@
 	}
 	
 	.emptyDiv {
-		height: 4em;
+		height: 4px;
 	}
 	
 	#cardNoHolder {
